--- a/index.html
+++ b/index.html
@@ -63,35 +63,35 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="Images/sushisamba.jpg" alt="SUSHISAMBA">
+            <img src="sushisamba.jpg" alt="SUSHISAMBA">
             <div class="carousel-caption">
               <h3>SUSHISAMBA</h3>
             </div>
           </div>
       
           <div class="item">
-            <img src="Images/ivy.jpg" alt="The Ivy Asia">
+            <img src="ivy.jpg" alt="The Ivy Asia">
             <div class="carousel-caption">
               <h3>The Ivy Asia</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="Images/sexyfish.jpg" alt="Sexy Fish">
+            <img src="sexyfish.jpg" alt="Sexy Fish">
             <div class="carousel-caption">
               <h3>Sexy Fish</h3>
             </div>
           </div>
 
           <div class="item">
-            <img src="Images/roka.jpg" alt="ROKA Mayfair">
+            <img src="roka.jpg" alt="ROKA Mayfair">
             <div class="carousel-caption">
               <h3>ROKA Mayfair</h3>
             </div>
           </div>
       
           <div class="item">
-            <img src="Images/mikaku.jpg" alt="Mikaku">
+            <img src="mikaku.jpg" alt="Mikaku">
             <div class="carousel-caption">
               <h3>Mikaku</h3>
             </div>
