--- a/recipes.html
+++ b/recipes.html
@@ -39,16 +39,16 @@
     <!-- Photo Grid -->
     <div class="row"> 
       <div class="column">
-        <a href="https://gran.luchito.com/recipes/chilli/vegan-chilli/" target="_blank"><img src="Images/chilli.webp" alt= "Chilli" style="width:100%"></a>
-        <a href="https://www.jamieoliver.com/recipes/vegetables-recipes/cauliflower-dhal/" target="_blank"><img src="Images/dhal.webp" alt="Cauliflower Dhal" style="width:100%"></a>
-        <a href="https://www.bbcgoodfood.com/recipes/vegan-shepherds-pie" target=_blank"><img src="Images/shepherdspie.webp" alt="Shepherd's Pie" style="width:100%"></a>
-        <a href="https://www.bbcgoodfood.com/recipes/vegan-cauliflower-cheese" target="_blank"><img src="Images/caulicheese.webp" alt="Cauliflour Cheese" style="width:100%"></a>
+        <a href="https://gran.luchito.com/recipes/chilli/vegan-chilli/" target="_blank"><img src="chilli.webp" alt= "Chilli" style="width:100%"></a>
+        <a href="https://www.jamieoliver.com/recipes/vegetables-recipes/cauliflower-dhal/" target="_blank"><img src="dhal.webp" alt="Cauliflower Dhal" style="width:100%"></a>
+        <a href="https://www.bbcgoodfood.com/recipes/vegan-shepherds-pie" target=_blank"><img src="shepherdspie.webp" alt="Shepherd's Pie" style="width:100%"></a>
+        <a href="https://www.bbcgoodfood.com/recipes/vegan-cauliflower-cheese" target="_blank"><img src="caulicheese.webp" alt="Cauliflour Cheese" style="width:100%"></a>
       </div>
       <div class="column">
-        <a href="https://www.bbcgoodfood.com/recipes/chocolate-avocado-cake" target="_blank"><img src="Images/cake.webp" alt="Chocolate Cake" style="width:100%"></a>
-        <a href="https://gran.luchito.com/recipes/nachos/vegan-nachos/" target="_blank"><img src="Images/nachos.jpeg" alt="Nachos" style="width:100%"></a>
-        <a href="https://www.bbcgoodfood.com/recipes/vegan-thai-curry" target="_blank"><img src="Images/curry.webp" alt="Thai Curry" style="width:100%"></a>
-        <a href="https://www.jamieoliver.com/recipes/vegetables-recipes/bulgur-amp-lentil-salad/" target="_blank"><img src="Images/salad.webp" alt="Bulgur & Lentil Salad" style="width:100%"></a>
+        <a href="https://www.bbcgoodfood.com/recipes/chocolate-avocado-cake" target="_blank"><img src="cake.webp" alt="Chocolate Cake" style="width:100%"></a>
+        <a href="https://gran.luchito.com/recipes/nachos/vegan-nachos/" target="_blank"><img src="nachos.jpeg" alt="Nachos" style="width:100%"></a>
+        <a href="https://www.bbcgoodfood.com/recipes/vegan-thai-curry" target="_blank"><img src="curry.webp" alt="Thai Curry" style="width:100%"></a>
+        <a href="https://www.jamieoliver.com/recipes/vegetables-recipes/bulgur-amp-lentil-salad/" target="_blank"><img src="salad.webp" alt="Bulgur & Lentil Salad" style="width:100%"></a>
       </div> 
       
     </main>
